chore: Remove JCreateNull() and JAddNullToObject()
    These APIs lead to undefined behavior, and their
    inclusion into the original API was an oversight.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,100 +56,42 @@ macro(add_test TEST_NAME)
     catch_discover_tests(${TEST_NAME})
 endmacro(add_test)
 
-add_test(NoteTransaction_test)
-add_test(NoteRequest_test)
-add_test(NoteRequestResponse_test)
-add_test(NoteRequestResponseWithRetry_test)
-add_test(NoteRequestResponseJSON_test)
-add_test(NoteRequestWithRetry_test)
-add_test(NoteReset_test)
-add_test(NoteGetEnv_test)
-add_test(NotePayload_test)
-add_test(i2cNoteTransaction_test)
-add_test(i2cNoteReset_test)
-add_test(serialNoteTransaction_test)
-add_test(serialNoteReset_test)
-add_test(NoteSetFn_test)
-add_test(NoteDebug_test)
-add_test(NoteTransactionHooks_test)
-add_test(NoteSerialHooks_test)
-add_test(NotePrint_test)
-add_test(NotePrintln_test)
-add_test(NoteTime_test)
-add_test(NoteRegion_test)
-add_test(NoteLocationValid_test)
-add_test(NoteIsConnected_test)
-add_test(NoteGetNetStatus_test)
-add_test(NoteGetVersion_test)
-add_test(NoteGetLocation_test)
-add_test(NoteSetLocation_test)
-add_test(NoteClearLocation_test)
-add_test(NoteGetLocationMode_test)
-add_test(NoteSetLocationMode_test)
-add_test(NoteGetServiceConfig_test)
-add_test(NoteGetStatus_test)
-add_test(NoteSleep_test)
-add_test(NoteNewRequest_test)
-add_test(NoteNewCommand_test)
-add_test(NoteErrorClean_test)
-add_test(NoteSetFnMutex_test)
-add_test(NoteSetFnI2CMutex_test)
-add_test(NoteSetFnNoteMutex_test)
-add_test(NoteSetFnSerial_test)
-add_test(NoteSetFnI2C_test)
-add_test(JIsPresent_test)
-add_test(JGetString_test)
-add_test(JGetArray_test)
-add_test(JGetObject_test)
-add_test(JBoolValue_test)
-add_test(JStringValue_test)
-add_test(JNumberValue_test)
-add_test(JGetNumber_test)
-add_test(JIntValue_test)
-add_test(JGetInt_test)
-add_test(JGetBool_test)
-add_test(JIsNullString_test)
-add_test(JIsExactString_test)
-add_test(JContainsString_test)
-add_test(JAddBinaryToObject_test)
-add_test(JGetBinaryFromObject_test)
-add_test(JItoA_test)
-add_test(JAtoI_test)
-add_test(JGetItemName_test)
-add_test(JAllocString_test)
-add_test(JType_test)
-add_test(JGetType_test)
-add_test(NotePrintf_test)
-add_test(NoteDebugf_test)
-add_test(NoteSetEnvDefault_test)
-add_test(NoteSetEnvDefaultNumber_test)
-add_test(NoteGetEnvNumber_test)
-add_test(NotePayloadSaveAndSleep_test)
-add_test(NoteWake_test)
-add_test(NotePayloadRetrieveAfterSleep_test)
-add_test(NoteUserAgent_test)
-add_test(NoteFactoryReset_test)
-add_test(NoteSetProductID_test)
-add_test(NoteSetSerialNumber_test)
-add_test(NoteSetUploadMode_test)
-add_test(NoteSetSyncMode_test)
-add_test(NoteTemplate_test)
-add_test(NoteTimeSet_test)
-add_test(NoteLocalTimeST_test)
-add_test(NoteAdd_test)
-add_test(NoteSendToRoute_test)
-add_test(NoteGetVoltage_test)
-add_test(NoteGetTemperature_test)
-add_test(NoteGetContact_test)
-add_test(NoteSetContact_test)
-add_test(NoteDebugSyncStatus_test)
 add_test(crcAdd_test)
 add_test(crcError_test)
-add_test(serialChunkedReceive_test)
-add_test(serialChunkedTransmit_test)
-add_test(i2cNoteQueryLength_test)
 add_test(i2cChunkedReceive_test)
 add_test(i2cChunkedTransmit_test)
+add_test(i2cNoteQueryLength_test)
+add_test(i2cNoteReset_test)
+add_test(i2cNoteTransaction_test)
+add_test(JAddBinaryToObject_test)
+add_test(JAllocString_test)
+add_test(JAtoI_test)
+add_test(JAtoN_test)
+add_test(JBaseItemType_test)
+add_test(JBoolValue_test)
+add_test(JContainsString_test)
+add_test(JGetArray_test)
+add_test(JGetBinaryFromObject_test)
+add_test(JGetBool_test)
+add_test(JGetInt_test)
+add_test(JGetItemName_test)
+add_test(JGetNumber_test)
+add_test(JGetObject_test)
+add_test(JGetString_test)
+add_test(JGetType_test)
+add_test(JIntValue_test)
+add_test(JIsExactString_test)
+add_test(JIsNullString_test)
+add_test(JIsPresent_test)
+add_test(JItoA_test)
+add_test(JNtoA_test)
+add_test(JNumberValue_test)
+add_test(JPrintUnformatted_test)
+add_test(JSON_number_handling_test)
+add_test(JStringValue_test)
+add_test(Jtolower_test)
+add_test(JType_test)
+add_test(NoteAdd_test)
 add_test(NoteBinaryCodecDecode_test)
 add_test(NoteBinaryCodecEncode_test)
 add_test(NoteBinaryCodecMaxDecodedLength_test)
@@ -159,12 +101,71 @@ add_test(NoteBinaryStoreEncodedLength_test)
 add_test(NoteBinaryStoreReceive_test)
 add_test(NoteBinaryStoreReset_test)
 add_test(NoteBinaryStoreTransmit_test)
-add_test(JPrintUnformatted_test)
-add_test(Jtolower_test)
-add_test(JSON_number_handling_test)
-add_test(JAtoN_test)
-add_test(JNtoA_test)
+add_test(NoteClearLocation_test)
+add_test(NoteDebug_test)
+add_test(NoteDebugf_test)
+add_test(NoteDebugSyncStatus_test)
+add_test(NoteErrorClean_test)
+add_test(NoteFactoryReset_test)
+add_test(NoteGetContact_test)
+add_test(NoteGetEnv_test)
+add_test(NoteGetEnvNumber_test)
+add_test(NoteGetLocation_test)
+add_test(NoteGetLocationMode_test)
+add_test(NoteGetNetStatus_test)
+add_test(NoteGetServiceConfig_test)
+add_test(NoteGetStatus_test)
+add_test(NoteGetTemperature_test)
+add_test(NoteGetVersion_test)
+add_test(NoteGetVoltage_test)
+add_test(NoteIsConnected_test)
+add_test(NoteLocalTimeST_test)
+add_test(NoteLocationValid_test)
+add_test(NoteNewCommand_test)
+add_test(NoteNewRequest_test)
+add_test(NotePayload_test)
+add_test(NotePayloadRetrieveAfterSleep_test)
+add_test(NotePayloadSaveAndSleep_test)
+add_test(NotePrint_test)
+add_test(NotePrintf_test)
+add_test(NotePrintln_test)
+add_test(NoteRegion_test)
+add_test(NoteRequest_test)
+add_test(NoteRequestResponse_test)
+add_test(NoteRequestResponseJSON_test)
+add_test(NoteRequestResponseWithRetry_test)
+add_test(NoteRequestWithRetry_test)
+add_test(NoteReset_test)
 add_test(NoteResponseError_test)
+add_test(NoteSendToRoute_test)
+add_test(NoteSerialHooks_test)
+add_test(NoteSetContact_test)
+add_test(NoteSetEnvDefault_test)
+add_test(NoteSetEnvDefaultNumber_test)
+add_test(NoteSetFn_test)
+add_test(NoteSetFnI2C_test)
+add_test(NoteSetFnI2CMutex_test)
+add_test(NoteSetFnMutex_test)
+add_test(NoteSetFnNoteMutex_test)
+add_test(NoteSetFnSerial_test)
+add_test(NoteSetLocation_test)
+add_test(NoteSetLocationMode_test)
+add_test(NoteSetProductID_test)
+add_test(NoteSetSerialNumber_test)
+add_test(NoteSetSyncMode_test)
+add_test(NoteSetUploadMode_test)
+add_test(NoteSleep_test)
+add_test(NoteTemplate_test)
+add_test(NoteTime_test)
+add_test(NoteTimeSet_test)
+add_test(NoteTransaction_test)
+add_test(NoteTransactionHooks_test)
+add_test(NoteUserAgent_test)
+add_test(NoteWake_test)
+add_test(serialChunkedReceive_test)
+add_test(serialChunkedTransmit_test)
+add_test(serialNoteReset_test)
+add_test(serialNoteTransaction_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
