fix: increase coverage

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,6 +67,7 @@ add_test(JAddBinaryToObject_test)
 add_test(JAllocString_test)
 add_test(JAtoI_test)
 add_test(JAtoN_test)
+add_test(JBaseItemType_test)
 add_test(JBoolValue_test)
 add_test(JContainsString_test)
 add_test(JGetArray_test)
