--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -20,10 +20,25 @@ build_flags =
 	-D UNITY_INCLUDE_PRINT_FORMATTED
 	'-D DEFAULT_NOTEHUB_PROXY_ROUTE_ALIAS="cobstest"'
 	'-D DEFAULT_PRODUCT_UID=""' # don't set the product UID
-lib_deps = blues/Blues Wireless Notecard@^1.5.1
+lib_deps = blues/Blues Wireless Notecard@^1.6.0
 debug_tool = stlink
+upload_protocol = stlink
 test_framework = unity
-test_port = /dev/swan
+test_port = /dev/note_c_hil_swan
+
+; The serial port used for streaming test results from the Swan to the host
+; computer takes a second to show up after uploading. This script waits for it
+; to show up before running the tests. See https://github.com/platformio/platformio-core/issues/3742.
+extra_scripts = post:wait_for_test_port.py
+
+; We need to pass this down to OpenOCD so that it uses the correct ST-LINK.
+; In my (Hayden's) HIL setup, there are many ST-LINKs connected to the same
+; machine. Simply specifying the serial port corresponding to a given ST-LINK
+; via upload_port doesn't work, so we have to use the specific serial number
+; of the ST-LINK we're trying to target.
+upload_flags =
+    -c
+    hla_serial 0029000F3156501420323443
 
 [env:debug]
 build_type = debug
