chore: improve test readability

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,12 +44,10 @@
             "options": {
                 "cwd": "${workspaceFolder}",
                 "env": {
-                    "LC_ALL":"C"
+                    "LC_ALL": "C"
                 }
             },
-            "problemMatcher": [
-                "$gcc"
-            ],
+            "problemMatcher": [],
             "group": {
                 "kind": "none"
             }
