--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -21,10 +21,7 @@ build_flags =
 	'-D DEFAULT_NOTEHUB_PROXY_ROUTE_ALIAS="cobstest"'
 	'-D DEFAULT_PRODUCT_UID=""' # don't set the product UID
 lib_deps = blues/Blues Wireless Notecard@^1.6.0
-debug_tool = stlink
-upload_protocol = stlink
 test_framework = unity
-test_port = /dev/note_c_hil_swan
 
 ; The serial port used for streaming test results from the Swan to the host
 ; computer takes a second to show up after uploading. This script waits for it
@@ -36,10 +33,13 @@ extra_scripts = post:wait_for_test_port.py
 ; machine. Simply specifying the serial port corresponding to a given ST-LINK
 ; via upload_port doesn't work, so we have to use the specific serial number
 ; of the ST-LINK we're trying to target.
-upload_flags =
-    -c
-    hla_serial 0029000F3156501420323443
+;upload_flags =
+;    -c
+;    hla_serial 0029000F3156501420323443
 
 [env:debug]
 build_type = debug
 debug_test = *
+upload_protocol = custom
+upload_command = ${sysenv.GDB_CMD} -ex "set confirm off" -ex "set pagination off" -ex "target extended-remote ${sysenv.MCU_GDB_SERVER_IP}:${sysenv.MCU_GDB_SERVER_PORT}" -ex "monitor reset halt" -ex "file .pio/build/debug/firmware.elf" -ex "load" -ex "monitor reset" -ex "quit"
+test_port = /tmp/mcu_usb
