chore: rename non-public API

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,13 +56,18 @@ macro(add_test TEST_NAME)
     catch_discover_tests(${TEST_NAME})
 endmacro(add_test)
 
-add_test(crcAdd_test)
-add_test(crcError_test)
-add_test(i2cChunkedReceive_test)
-add_test(i2cChunkedTransmit_test)
-add_test(i2cNoteQueryLength_test)
-add_test(i2cNoteReset_test)
-add_test(i2cNoteTransaction_test)
+add_test(_crcAdd_test)
+add_test(_crcError_test)
+add_test(_i2cChunkedReceive_test)
+add_test(_i2cChunkedTransmit_test)
+add_test(_i2cNoteQueryLength_test)
+add_test(_i2cNoteReset_test)
+add_test(_i2cNoteTransaction_test)
+add_test(_j_tolower_test)
+add_test(_serialChunkedReceive_test)
+add_test(_serialChunkedTransmit_test)
+add_test(_serialNoteReset_test)
+add_test(_serialNoteTransaction_test)
 add_test(JAddBinaryToObject_test)
 add_test(JAllocString_test)
 add_test(JAtoI_test)
@@ -89,7 +94,6 @@ add_test(JNumberValue_test)
 add_test(JPrintUnformatted_test)
 add_test(JSON_number_handling_test)
 add_test(JStringValue_test)
-add_test(Jtolower_test)
 add_test(JType_test)
 add_test(NoteAdd_test)
 add_test(NoteBinaryCodecDecode_test)
@@ -162,10 +166,6 @@ add_test(NoteTransaction_test)
 add_test(NoteTransactionHooks_test)
 add_test(NoteUserAgent_test)
 add_test(NoteWake_test)
-add_test(serialChunkedReceive_test)
-add_test(serialChunkedTransmit_test)
-add_test(serialNoteReset_test)
-add_test(serialNoteTransaction_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
