--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,24 @@
             }
         },
         {
+            "label": "Note-C: Compile and Run ALL Tests (with coverage)",
+            "type": "cppbuild",
+            "command": "./scripts/run_unit_tests.sh",
+            "args": [
+                "--coverage",
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            }
+        },
+        {
             "label": "Note-C: Compile and Run ALL Tests (with coverage and memory check)",
             "type": "cppbuild",
             "command": "./scripts/run_unit_tests.sh",
@@ -40,6 +58,41 @@
             "label": "Note-C: Run `astyle` Formatter",
             "type": "shell",
             "command": "./scripts/run_astyle.sh",
+            "args": [],
+            "options": {
+                "cwd": "${workspaceFolder}",
+                "env": {
+                    "LC_ALL": "C"
+                }
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "none"
+            }
+        },
+        {
+            "label": "Note-C: Generate Coverage HTML",
+            "type": "shell",
+            "command": "genhtml lcov.info -o tmp",
+            "args": [],
+            "options": {
+                "cwd": "${workspaceFolder}/build/test/coverage",
+                "env": {
+                    "LC_ALL": "C"
+                }
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "none"
+            },
+            "dependsOn": [
+                "Note-C: Compile and Run ALL Tests (with coverage)"
+            ]
+        },
+        {
+            "label": "Note-C: Generate Documentation",
+            "type": "shell",
+            "command": "./scripts/build_docs.sh",
             "args": [],
             "options": {
                 "cwd": "${workspaceFolder}",
