--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -41,5 +41,5 @@ extra_scripts = post:wait_for_test_port.py
 build_type = debug
 debug_test = *
 upload_protocol = custom
-upload_command = ${sysenv.GDB_CMD} -ex "set confirm off" -ex "set pagination off" -ex "target extended-remote ${sysenv.MCU_GDB_SERVER_IP}:${sysenv.MCU_GDB_SERVER_PORT}" -ex "monitor reset halt" -ex "file .pio/build/debug/firmware.elf" -ex "load" -ex "monitor reset" -ex "quit"
-test_port = /tmp/mcu_usb
+upload_command = ${sysenv.GDB_CMD} -ex "set confirm off" -ex "set pagination off" -ex "file .pio/build/debug/firmware.elf" -ex "target extended-remote ${sysenv.MCU_GDB_SERVER_IP}:${sysenv.MCU_GDB_SERVER_PORT}" -ex "monitor reset halt" -ex "load" -ex "monitor reset" -ex "quit"
+test_port = /tmp/ns_mcu_usb
