fix: Remove Catch2 from coverage statistics

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -189,8 +189,11 @@ if(NOTE_C_COVERAGE)
     foreach(EXCLUDE_FILE ${EXCLUDE_FROM_COVERAGE})
         string(APPEND LCOV_EXCLUDE "--exclude '*/${EXCLUDE_FILE}' ")
     endforeach()
-    # We don't care about coverage for the tests themselves.
+
+    # We don't care about coverage for the tests or testing infrastructure.
     string(APPEND LCOV_EXCLUDE "--exclude '*/test/*' ")
+    string(APPEND LCOV_EXCLUDE "--exclude '*/build/_deps/*' ")
+
     separate_arguments(LCOV_EXCLUDE_LIST NATIVE_COMMAND "${LCOV_EXCLUDE}")
     # Run lcov to produce a coverage report in the coverage directory.
     add_custom_command(
