--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -178,7 +178,7 @@ if(NOTE_C_COVERAGE)
         # Zero out the coverage counters from any previous runs.
         COMMAND lcov --zerocounters --directory ${NOTE_C_SRC_DIR}
         COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
-        WORKING_DIRECTORY ${CMAKE_CURENT_BINARY_DIR}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
     # These files are third party code that we aren't interested in testing
     # ourselves, so we don't care about coverage for them.
