TS-643: Fix 32-bit breakage in JSON_number_handling_test.cpp.
When Zak recently converted the unit tests to be compiled for 32-bit instead of
64-bit, this test mysteriously broke. Specifically, this scenario:

```
GIVEN("A JSON object with a numeric field with the max value of JINTEGER") {
    const char expected[] = "{\"" FIELD "\":" JINTEGER_MAX_STR "}";
    obj = JCreateObject();
    REQUIRE(obj != NULL);
    REQUIRE(JAddIntToObject(obj, FIELD, JINTEGER_MAX) != NULL);

    WHEN("JPrintUnformatted is called on that object") {
        char *out = JPrintUnformatted(obj);
        REQUIRE(out != NULL);

        THEN("The value is printed accurately") {
            CHECK(strcmp(expected, out) == 0);
        }

        JFree(out);
    }

    JDelete(obj);
}
```

JINTEGER_MAX is 9223372036854775807. After switching to 32-bit,
JPrintUnformatted was printing 9.2233720368547758e+18. The problem comes down
to the _print_number CJSON function, specifically this bit:

```
if (vnum != (JNUMBER)vint) {
    JNtoA(vnum, nbuf, -1);
} else {
    JItoA(vint, nbuf);
}
```

vnum is the JNUMBER (double) representation of the number stored in the JSON
object. vint is the integer representation. For 9223372036854775807, these two
values should be equal, and the JItoA should be taken. However, after the change
to 32-bit, the JNtoA branch was being taken instead, leading to the test
failure. ChatGPT has a good explanation for why this is happening:

1. `vnum` is `9.2233720368547758e+18` (a `double` value).
2. `vint` is `9223372036854775807` (which is `int64_t`, i.e., `0x7FFFFFFFFFFFFFFF`).
3. When compiled in **64-bit mode**, `vint` is converted to `double` using **strict 64-bit IEEE 754** rules, resulting in:
   ```
   (JNUMBER)vint == 9.2233720368547758e+18
   ```
   which exactly matches `vnum`, so the condition `vnum != (JNUMBER)vint` evaluates to **false**, taking the `JItoA` branch.

4. When compiled in **32-bit mode**, the x87 FPU often operates in **80-bit extended precision**, even

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -89,7 +89,7 @@ add_test(JItoA_test)
 add_test(JNtoA_test)
 add_test(JNumberValue_test)
 add_test(JPrintUnformatted_test)
-# add_test(JSON_number_handling_test)
+add_test(JSON_number_handling_test)
 add_test(JStringValue_test)
 add_test(JType_test)
 add_test(NoteAdd_test)
