chore: Cover n_hooks.c

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -63,6 +63,17 @@ add_test(_i2cNoteQueryLength_test)
 add_test(_i2cNoteReset_test)
 add_test(_i2cNoteTransaction_test)
 add_test(_j_tolower_test)
+add_test(_noteChunkedReceive_test)
+add_test(_noteChunkedTransmit_test)
+add_test(_noteHardReset_test)
+add_test(_noteI2CReceive_test)
+add_test(_noteI2CReset_test)
+add_test(_noteI2CTransmit_test)
+add_test(_noteJSONTransaction_test)
+add_test(_noteSerialAvailable_test)
+add_test(_noteSerialReceive_test)
+add_test(_noteSerialReset_test)
+add_test(_noteSerialTransmit_test)
 add_test(_noteSetActiveInterface_test)
 add_test(_serialChunkedReceive_test)
 add_test(_serialChunkedTransmit_test)
@@ -109,8 +120,10 @@ add_test(NoteClearLocation_test)
 add_test(NoteDebug_test)
 add_test(NoteDebugf_test)
 add_test(NoteDebugSyncStatus_test)
+add_test(NoteDelayMs_test)
 add_test(NoteErrorClean_test)
 add_test(NoteFactoryReset_test)
+add_test(NoteFree_test)
 add_test(NoteGetActiveInterface_test)
 add_test(NoteGetContact_test)
 add_test(NoteGetEnv_test)
@@ -126,15 +139,19 @@ add_test(NoteGetFnSerial_test)
 add_test(NoteGetFnTransaction_test)
 add_test(NoteGetLocation_test)
 add_test(NoteGetLocationMode_test)
+add_test(NoteGetMs_test)
 add_test(NoteGetNetStatus_test)
 add_test(NoteGetServiceConfig_test)
 add_test(NoteGetStatus_test)
 add_test(NoteGetTemperature_test)
 add_test(NoteGetVersion_test)
 add_test(NoteGetVoltage_test)
+add_test(NoteI2CAddress_test)
+add_test(NoteI2CMax_test)
 add_test(NoteIsConnected_test)
 add_test(NoteLocalTimeST_test)
 add_test(NoteLocationValid_test)
+add_test(NoteMalloc_test)
 add_test(NoteNewCommand_test)
 add_test(NoteNewRequest_test)
 add_test(NotePayload_test)
@@ -169,6 +186,7 @@ add_test(NoteSetFnSerial_test)
 add_test(NoteSetFnTransaction_test)
 add_test(NoteSetLocation_test)
 add_test(NoteSetLocationMode_test)
+add_test(NoteSetLogLevel_test)
 add_test(NoteSetProductID_test)
 add_test(NoteSetSerialNumber_test)
 add_test(NoteSetSyncMode_test)
