--- a/.devcontainer/ci/devcontainer.json
+++ b/.devcontainer/ci/devcontainer.json
@@ -1,14 +1,14 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.205.2/containers/docker-existing-dockerfile
 {
-    "name": "Note-C Development Environment Dockerfile",
+    "name": "Continuous Integration Development Environment Dockerfile",
 
     // Sets the run context to one level up instead of the .devcontainer folder.
-    "context": "..",
+    "context": "${localWorkspaceFolder}",
 
     // Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
     "image": "ghcr.io/blues/note_c_ci:latest",
-    // "dockerFile": "../Dockerfile",
+    // "dockerFile": "Dockerfile",
 
     // Set *default* container specific settings.json values on container create.
     "settings": {},
