TS-688: Don't run card.binary HIL tests until "start" is received.
Also ran astyle and committed its changes.

--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -26,7 +26,7 @@ test_framework = unity
 ; The serial port used for streaming test results from the Swan to the host
 ; computer takes a second to show up after uploading. This script waits for it
 ; to show up before running the tests. See https://github.com/platformio/platformio-core/issues/3742.
-extra_scripts = post:wait_for_test_port.py
+extra_scripts = post:after_upload.py
 
 ; We need to pass this down to OpenOCD so that it uses the correct ST-LINK.
 ; In my (Hayden's) HIL setup, there are many ST-LINKs connected to the same
