chore: increase coverage in n_request.c

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,6 +55,7 @@ endmacro(add_test)
 
 add_test(_crcAdd_test)
 add_test(_crcError_test)
+add_test(_errDoc_test)
 add_test(_i2cChunkedReceive_test)
 add_test(_i2cChunkedTransmit_test)
 add_test(_i2cNoteChunkedReceive_test)
@@ -75,6 +76,7 @@ add_test(_noteSerialReceive_test)
 add_test(_noteSerialReset_test)
 add_test(_noteSerialTransmit_test)
 add_test(_noteSetActiveInterface_test)
+add_test(_noteTransaction_calculateTimeoutMs_test)
 add_test(_serialChunkedReceive_test)
 add_test(_serialChunkedTransmit_test)
 add_test(_serialNoteReset_test)
@@ -168,6 +170,7 @@ add_test(NoteRequestResponseWithRetry_test)
 add_test(NoteRequestWithRetry_test)
 add_test(NoteReset_test)
 add_test(NoteResponseError_test)
+add_test(NoteResumeTransactionDebug_test)
 add_test(NoteSendToRoute_test)
 add_test(NoteSerialHooks_test)
 add_test(NoteSetActiveInterface_test)
@@ -194,6 +197,7 @@ add_test(NoteSetSerialNumber_test)
 add_test(NoteSetSyncMode_test)
 add_test(NoteSetUploadMode_test)
 add_test(NoteSleep_test)
+add_test(NoteSuspendTransactionDebug_test)
 add_test(NoteTemplate_test)
 add_test(NoteTime_test)
 add_test(NoteTimeSet_test)
