feat: Helper NoteAuxSerialFlowControl()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -109,6 +109,7 @@ add_test(JSON_number_handling_test)
 add_test(JStringValue_test)
 add_test(JType_test)
 add_test(NoteAdd_test)
+add_test(NoteAuxSerialFlowControl_test)
 add_test(NoteBinaryCodecDecode_test)
 add_test(NoteBinaryCodecEncode_test)
 add_test(NoteBinaryCodecMaxDecodedLength_test)
