--- a/.github/workflows/notecard-binary-tests.yml
+++ b/.github/workflows/notecard-binary-tests.yml
@@ -48,11 +48,13 @@ jobs:
         CREATE_NOTEHUB_ROUTES: true
     steps:
       - name: Connect to Tailscale
-        uses: tailscale/github-action@v2
+        uses: tailscale/github-action@v3
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
           tags: tag:ci
+          version: latest
+          use-cache: 'true'
 
       # Needed so we can download Notecard firmware from S3.
       - name: Configure AWS credentials
