feat: Unit-tests for NoteSetRequestTimeout

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -194,6 +194,7 @@ add_test(NoteSetLocation_test)
 add_test(NoteSetLocationMode_test)
 add_test(NoteSetLogLevel_test)
 add_test(NoteSetProductID_test)
+add_test(NoteSetRequestTimeout_test)
 add_test(NoteSetSerialNumber_test)
 add_test(NoteSetSyncMode_test)
 add_test(NoteSetUploadMode_test)
