chore: test heartbeat callback

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,6 +67,7 @@ add_test(_j_tolower_test)
 add_test(_noteChunkedReceive_test)
 add_test(_noteChunkedTransmit_test)
 add_test(_noteHardReset_test)
+add_test(_noteHeartbeat_test)
 add_test(_noteI2CReceive_test)
 add_test(_noteI2CReset_test)
 add_test(_noteI2CTransmit_test)
@@ -132,6 +133,7 @@ add_test(NoteGetContact_test)
 add_test(NoteGetEnv_test)
 add_test(NoteGetEnvNumber_test)
 add_test(NoteGetFnDebugOutput_test)
+add_test(NoteGetFnHeartbeat_test)
 add_test(NoteGetFn_test)
 add_test(NoteGetFnI2C_test)
 add_test(NoteGetI2CAddress_test)
@@ -180,6 +182,7 @@ add_test(NoteSetEnvDefault_test)
 add_test(NoteSetEnvDefaultNumber_test)
 add_test(NoteSetFn_test)
 add_test(NoteSetFnDebugOutput_test)
+add_test(NoteSetFnHeartbeat_test)
 add_test(NoteSetFnDefault_test)
 add_test(NoteSetFnDisabled_test)
 add_test(NoteSetFnI2C_test)
