chore: Improve I2C config

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -137,6 +137,7 @@ add_test(NoteGetFnHeartbeat_test)
 add_test(NoteGetFn_test)
 add_test(NoteGetFnI2C_test)
 add_test(NoteGetI2CAddress_test)
+add_test(NoteGetI2CMtu_test)
 add_test(NoteGetFnI2CMutex_test)
 add_test(NoteGetFnMutex_test)
 add_test(NoteGetFnNoteMutex_test)
@@ -191,8 +192,10 @@ add_test(NoteSetFnMutex_test)
 add_test(NoteSetFnNoteMutex_test)
 add_test(NoteSetFnSerial_test)
 add_test(NoteSetFnSerialDefault_test)
-add_test(NoteSetFnI2cDefault_test)
+add_test(NoteSetFnI2CDefault_test)
 add_test(NoteSetFnTransaction_test)
+add_test(NoteSetI2CAddress_test)
+add_test(NoteSetI2CMtu_test)
 add_test(NoteSetLocation_test)
 add_test(NoteSetLocationMode_test)
 add_test(NoteSetLogLevel_test)
