fix: build for `NOTE_NODEBUG`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(NOTE_C_BUILD_TESTS "Build tests." ON)
 option(NOTE_C_COVERAGE "Compile for test NOTE_C_COVERAGE reporting." OFF)
 option(NOTE_C_LOW_MEM "Build the library tailored for low memory usage." OFF)
 option(NOTE_C_MEM_CHECK "Run tests with Valgrind." OFF)
+option(NOTE_NODEBUG "Build the library without debug information." OFF)
 option(NOTE_C_NO_LIBC "Build the library without linking against libc, generating errors for any undefined symbols." OFF)
 option(NOTE_C_SHOW_MALLOC "Build the library with flags required to log memory usage." OFF)
 option(NOTE_C_SINGLE_PRECISION "Use single precision for JSON floating point numbers." OFF)
@@ -102,6 +103,14 @@ if(NOTE_C_NO_LIBC)
             -nostdlib
             -nodefaultlibs
             LINKER:--no-undefined
+    )
+endif()
+
+if(NOTE_NODEBUG)
+    target_compile_definitions(
+        note_c
+        PUBLIC
+            NOTE_NODEBUG
     )
 endif()
 
