feat: add install directives for CMake
This makes it possible to install the library and public includes using
standard commands. For example:

$ DESTDIR=./rootfs cmake --install ./build/ --prefix '/usr'
-- Install configuration: ""
-- Installing: ./rootfs/usr/lib/libnote_c.so
-- Installing: ./rootfs/usr/include/note-c/n_cjson.h
-- Installing: ./rootfs/usr/include/note-c/note.h

Signed-off-by: Jakov Petrina <jakov.petrina@byte-lab.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,3 +161,16 @@ endif(NOTE_C_BUILD_TESTS)
 if(NOTE_C_BUILD_DOCS)
     add_subdirectory(docs)
 endif(NOTE_C_BUILD_DOCS)
+
+set_target_properties(note_c PROPERTIES PRIVATE_HEADER "${NOTE_C_SRC_DIR}/n_cjson.h")
+set_target_properties(note_c PROPERTIES PUBLIC_HEADER "${NOTE_C_SRC_DIR}/note.h")
+
+install(TARGETS note_c
+    EXPORT note_c
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/note-c
+    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/note-c
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/note-c
+)
